# old_repository_backup

./: CMakeLists.txt  README.md
output_cxx/common/: header.pb.cc  header.pb.h
output_cxx/sensor/: cloud_common.pb.cc  cloud_common.pb.h  cloudxyz.pb.cc  cloudxyz.pb.h  cloudxyzi.pb.cc  cloudxyzi.pb.h  cloudxyzit.pb.cc  cloudxyzit.pb.h  image.pb.cc  image.pb.h  image_compressed.pb.cc  image_compressed.pb.h
proto/sensor/: cloud_common.proto  cloudxyz.proto  cloudxyzi.proto  cloudxyzit.proto  image.proto  image_compressed.proto
